# cs354

./: CMakeLists.txt  README  project2.bat.cmake  vs2012-express.bat.cmake
CMake/: FindBoost.cmake  FindGLEW.cmake  FindGLUT.cmake  SetupBoost.cmake
src/: CMakeLists.txt
src/project1/: CMakeLists.txt  README  canvas.c  drawing.c  drawing.h  mouse.c  mouse.h  project1.txt  vrml.c  vrml.h
src/project2/: CMakeLists.txt  README  drawplant.c  drawplant.h  matrix.c  matrix.h  plant.c  project2.txt
src/project3/: CMakeLists.txt  README  drawing.c  drawing.h  project3.txt  subdiv.c
src/project4/: CMakeLists.txt  README  geometry.c  light.c  lowlevel.c  lowlevel.h  project4.txt  raytrace.c  raytrace.h  readppm.c  readppm.h  tex.ppm  texture.h.cmake
