CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

OPTION(BUILD_PROJECT1 "project1 - OpenGL scene" ON)
IF(BUILD_PROJECT1)
  ADD_SUBDIRECTORY(project1)
ENDIF(BUILD_PROJECT1)

OPTION(BUILD_PROJECT2 "project2 - L-system" ON)
IF(BUILD_PROJECT2)
  ADD_SUBDIRECTORY(project2)
ENDIF(BUILD_PROJECT2)

OPTION(BUILD_PROJECT3 "project3 - subdivisions" ON)
IF(BUILD_PROJECT3)
  ADD_SUBDIRECTORY(project3)
ENDIF(BUILD_PROJECT3)

OPTION(BUILD_PROJECT4 "project4 - raytracing quadratic surfaces" ON)
IF(BUILD_PROJECT4)
  ADD_SUBDIRECTORY(project4)
ENDIF(BUILD_PROJECT4)

